made index marquee color responsive and fixed nav spacing

--- a/app/assets/stylesheets/main/nav.css
+++ b/app/assets/stylesheets/main/nav.css
@@ -1,6 +1,7 @@
 .nav-bar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-top: 10px;
     padding-bottom: 10px;;
 }
@@ -8,13 +9,11 @@
 .nav-left {
     display: flex;
     margin-left: 5vw;
-    align-items: center;
 }
 
 .nav-right {
     display: flex;
     margin-right: 5vw;
-    align-items: center;
     cursor: pointer;
 }
 
@@ -88,16 +87,23 @@
     display: flex;
 }
 
+.green {
+    color: #21ce99;
+}
+
+.red {
+    color: red;
+}
+
 .marquee-item {
     display: flex;
     list-style: none;
     color: white;
-    padding-left: 80px;
+    /* padding-left: 80px; */
+    margin: 0 15vw 0 0;
     padding-top: 5px;
     padding-bottom: 5px;
     font-family: 'Orbitron', sans-serif;
-    animation-iteration-count: infinite;
-    animation-duration: 75s;
 }
 
 .marquee-item-data {
